updated fonts for all known pages also resolved some spacing issues

--- a/front-end-workspace/protec-angular-workspace/projects/protec/src/app/modules/base/header/header-desktop/header-desktop.component.scss
+++ b/front-end-workspace/protec-angular-workspace/projects/protec/src/app/modules/base/header/header-desktop/header-desktop.component.scss
@@ -32,6 +32,10 @@
     background-color: var(--deep-forest);
     outline: none;
     border: none;
+    padding: 6px;
+}
+.dropdown-bg:hover{
+    background-color: var(--muted-forest)
 }
 .dropdown:hover>.dropdown-menu {
     display: block;
@@ -46,26 +50,27 @@
     display: none;
 }
 .dropdown-toggle{
-    margin-bottom: -10px !important;
+    margin-bottom:-6px !important;
 }
 .dropdown-menu{
     margin-top: -4px;
     opacity: 1;
     background-color: #ECE9EB;
-    padding:0.5px;
+    padding:0px;
 }
 .dropdown-item{
     margin-bottom: 0.5px !important;
+
     opacity: 1;
     font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) var(--unnamed-font-size-13)/var(--unnamed-line-spacing-18) var(--unnamed-font-family-open-sans);
     letter-spacing: var(--unnamed-character-spacing-0);
     color: var(--light-taupe);
     text-align: left;
-    font: normal normal 600 13px/18px Open Sans;
     letter-spacing: 0px;
     color: #ECE9EB;
     opacity: 1;
     font-style: normal;
     font-family: "Open sans", sans-serif;
     font-weight: lighter;
+    font-size: small;
 }
